[package]
name = "glints-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.13.3", default-features = false, features = ["yaml"] }
serde = { version = "1.0.163", features = ["derive"] }
shaku = "0.6.1"
