[package]
name = "glints-infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel-async = { version = "0.2.2", features = ["postgres", "mobc"] }
shaku = "0.6.1"
glints-config = { version = "0.1.0", path = "../glints-config" }
diesel = { version = "2.0.4", features = ["postgres"] }

