[package]
name = "glints-managed-talent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
shaku = "0.6.1"
glints-infra = { path = "../glints-infra", version = "0.1.0" }
diesel = { version = "2.0.4", features = ["postgres", "uuid"] }
diesel-async = "0.2.2"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
